--- a/Project/templates/error.html
+++ b/Project/templates/error.html
@@ -108,7 +108,7 @@
         </ul>
     </nav>
     <div class="srch">
-        <h1>Welcome to the website...{{message}}</h1>
+        <h1>ERROR : {{message}}</h1>
     </div>
     
 
