--- a/Project/templates/home.html
+++ b/Project/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <title>
         HOME
-    </title>
+    </title> 
     <style>
         body {
             margin: 0;
@@ -74,8 +74,8 @@
     <nav id="menubar">
         <ul id="menu">
             <li><a href="#">HOME</a></li>
-            <li><a href="{{url_for('registration')}}">REGISTER</a></li>
-            <LI><a href="{{url_for('sendtologin')}}">LOG IN</a></LI>
+            <li><a href="{{url_for('register')}}">REGISTER</a></li>
+            <LI><a href="{{url_for('login')}}">LOG IN</a></LI>
         </ul>
     </nav>
     <h1>WELCOME!!</h1>
