--- a/Project/templates/register.html
+++ b/Project/templates/register.html
@@ -1,23 +1,70 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Register
-        </title>
+
+<head>
+    <title>
+        REGISTER
+    </title> 
     <style>
         body {
             margin: 0;
             padding: 0;
-            background: url(https://img1.goodfon.com/wallpaper/nbig/1/39/nastroeniya-kniga-knizhka-5644.jpg);
-            background-position: center;
+            background: url(https://img.etimg.com/thumb/msid-67619899,width-640,resizemode-4,imgsize-134956/coincidence-or-what.jpg);
+            background-size: cover;
             background-repeat: no-repeat;
             height: 100vh;
-            background-size: cover
+            width: 100%;
+        }
+        
+        #menubar {
+            width: 100%;
+            background-color: wheat;
+            height: 60px;
+        }
+        
+        #menu {
+            color: rgb(185, 78, 78);
+            list-style-type: none;
+            line-height: 40px;
+        }
+        
+        #menu li {
+            display: inline-block;
+        }
+        
+        #menu li a {
+            padding: 10px;
+            text-decoration: none;
+            color: rgb(207, 65, 65);
+            display: block;
+            font-weight: 800;
+        }
+        
+        #menu li a:hover {
+            background-color: rgb(71, 13, 13);
+        }
+        
+        
+        
+        p {
+            color: rgb(177, 61, 61);
+            text-align: center;
+            font-weight: 800;
+        }
+        
+        .names {
+            list-style-type: none;
+            color: white;
+            font-weight: 800;
+        }
+        
+        h3 {
+            color: rgb(235, 225, 225);
         }
         #h1 {
-            background-color: rgb(235, 152, 119) ;
-            text-align: center;
-            font-size: 50px;
+            /*background-color: rgb(235, 152, 119) ;*/
+            text-align: left;
+            font-size: 40px;
             font-family: Times New Roman, cursive, serif;
             color: rgb(77, 41, 13)
         }
@@ -25,27 +72,32 @@
             margin: 40px;
         }
         .naming {
-            color: rgb(235, 152, 119);
+            color: black;
             line-height: 50px;
             font-size: 20px;
         }
         button {
-            font-size: xx-large
+            font-size: x-large
         }
         button:hover {
             background-color: rgba(146, 92, 92, 0.89);
 
         }
     </style>
-    <link rel = "stylesheet" href="design.css">
-    <meta name = "viewport" content="width = device-width, initial-scale = 1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    </head>
+
+</head>
 
 <body>
+    <nav id="menubar">
+        <ul id="menu">
+            <li><a href="#">HOME</a></li>
+            <li><a href="{{url_for('register')}}">REGISTER</a></li>
+            <LI><a href="{{url_for('login')}}">LOG IN</a></LI>
+        </ul>
+    </nav>
     <h1 id="h1">Register Here!!</h1>
     <div>
-        <form action="{{url_for('hello')}}" method="POST">
+        <form action="{{url_for('register')}}" method="POST">
             <!-- <hr> -->
             <label class="naming" for="name">Full Name: </label>
             <input type="text" name="name" placeholder="full name"><br>
@@ -58,5 +110,7 @@
         </form>
 
     </div>
+
 </body>
+
 </html>
